Clarified some warnings and corrected typos in vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@50348 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/KCS.Rnw
+++ b/inst/doc/KCS.Rnw
@@ -30,7 +30,7 @@ This data is the simplest form available to use in KCSMART. As can be observed u
 <<>>=
 str(hsSampleData)
 @
-The user can easily model their data in this format, basically only requiring a column named \texttt{\$chrom} containing the chromosome on which the probe is located and a column named \texttt{\$maploc} containing the chromosomal location of the probe. Alternatively, both \texttt{DNAcopy} and \texttt{CGHbase} objects can be used as direct input for the \texttt{calcSpm} function discussed below.
+The user can easily model their data in this format, basically only requiring a column named \texttt{chrom} containing the chromosome on which the probe is located and a column named \texttt{maploc} containing the chromosomal location of the probe. Alternatively, \texttt{DNAcopy}, \texttt{CGHraw} and \texttt{CGHbase} objects can be used as direct input for the \texttt{calcSpm} function discussed below.
 
 KC-SMART uses mirroring of the probes at the ends of chromosomes and near centromeres to prevent signal decay by the convolution. The locations of the centromeres and the lengths of the chromosomes are therefore necessary information. Hard-coded information about the human and mouse genome is supplied, but the user can easily provide the coordinates themselves in R. The 'mirrorLocs' object is a list with vectors containing the start, centromere (optional) and end of each chromosome as the list elements. Additionally it should  contain an attribute 'chromNames' listing the chromosome names of each respective list element.
 
@@ -95,7 +95,7 @@ Now let's have a look at the information contained in \texttt{sigRegions1mb}, it
 sigRegions1mb
 @
 
-You could write the infomation contained in \texttt{sigRegions1mb} to a file using \texttt{write.table(write.table(sigRegions1mb, file='sig.txt')}. You can also access the information in R using subsetting. For example, if you wanted to find the probe-names of the probes contained in the first significantly gained region you can get them like this:
+You could write the infomation contained in \texttt{sigRegions1mb} to a file using \texttt{write.table(sigRegions1mb, file='sig.txt')}. You can also access the information in R using subsetting. For example, if you wanted to find the probe-names of the probes contained in the first significantly gained region you can get them like this:
 
 <<>>=
 sigRegions1mb@gains[[1]]$probes
@@ -136,7 +136,7 @@ spmc1mb <- calcSpmCollection(hsSampleData, hsMirrorLocs, cl=c(rep(0,10),rep(1,10
 We get a few warnings that some sample points are listed as \texttt{NA}. These sample points are the mirrored sample points that fall outside the chromosome boundaries, so they will not be used in the analysis. The next step is to calculate the significance of the diffences between the subgroups. We use the \texttt{compareSpmCollection} command for this. Using a parameter called \texttt{method} we define the method to determine significance. The option \texttt{"perm"} will use class label permutation to define an empirical null-distribution against which the actual differences are measured. The \texttt{"siggenes"} option will utilise the siggenes package to determine the significance, this option is both faster and uses less memory. 
 
 <<>>=
-spmc1mb.sig <- compareSpmCollection(spmc1mb, nperms=3, method=c("siggenes"))
+spmc1mb.sig <- compareSpmCollection(spmc1mb, nperms=3, method=c"siggenes")
 spmc1mb.sig
 @
 
