Adjustments to KCsmart 2.9.1:
- Introduced KernSmooth package for kernel convolution

This introduces a local extimation of the density and convolution via fft. ~160 times faster,
but the algorithm has trouble in low density areas. Therefore we set low-density areas to
NA. There are more low density areas if you use a smaller kernel width. The result of the 
KernSmooth algorithm gives reliable (~.99 correlation) results for datasets with on average
5 probes/sigma.
Two causes for the difference between the new and the old version are:
1. NAs in the sampling grid are different, since we enforce low-density areas to be NA.
2. The sampling grid is different, as it is slightly adjested to accomodate the Fourier Transform.

introduced an 'old' boolean flag to the calcSpm and calcSpmCollection functions so users can still run
the old method if they want to reproduce old results.

- Removed the mirroring of probes in every iteration of the permutation

Currently the mirroring of the probes takes ~15 sec. This was repeated every iteration of
the loop. I removed the mirroring to once before the loop. In the loop itself the mirrored
probes are now drawn from the permuted values, instead of the permuted values themselves
being mirrored at the boundaries. This should not make any difference.

- Permute the data before the separation in positive and negative values

The permutation was done on both the positive and the negative data. As the permutation
took ~9 sec each this was a large time bottleneck. Now I permute and only split afterwards.
Furthermore I rewrote the permutation to a for loop instead of an apply function, this gave
a speed advantage in a 26 sample dataset (385k probes) of factor 5.

- Check for a correct class vector before doing all the samples (in comparative section)

An error was raised if the class vector was not correct but only after the kernel smoothing 
of all samples. This check is now done at the beginning to prevent unnessesary waiting on an analysis

--- a/inst/doc/KCS.Rnw
+++ b/inst/doc/KCS.Rnw
@@ -136,7 +136,7 @@ spmc1mb <- calcSpmCollection(hsSampleData, hsMirrorLocs, cl=c(rep(0,10),rep(1,10
 We get a few warnings that some sample points are listed as \texttt{NA}. These sample points are the mirrored sample points that fall outside the chromosome boundaries, so they will not be used in the analysis. The next step is to calculate the significance of the diffences between the subgroups. We use the \texttt{compareSpmCollection} command for this. Using a parameter called \texttt{method} we define the method to determine significance. The option \texttt{"perm"} will use class label permutation to define an empirical null-distribution against which the actual differences are measured. The \texttt{"siggenes"} option will utilise the siggenes package to determine the significance, this option is both faster and uses less memory. 
 
 <<>>=
-spmc1mb.sig <- compareSpmCollection(spmc1mb, nperms=3, method=c"siggenes")
+spmc1mb.sig <- compareSpmCollection(spmc1mb, nperms=3, method=c("siggenes"))
 spmc1mb.sig
 @
 
