Added package paper reference to the vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@52650 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/KCS.Rnw
+++ b/inst/doc/KCS.Rnw
@@ -158,6 +158,8 @@ plot(spmc1mb.sig, sigRegions=spmc1mb.sig.regions)
 
 1. Klijn \emph{et. al.} Identification of cancer genes using a statistical framework for multiexperiment analysis of nondiscretized array CGH data. \emph{Nucleic Acids Research}. \textbf{36} No. 2, e13.
 
+2. de Ronde \emph{et. al.} KC-SMARTR: An R package for detection of statistically significant aberrations in multi-experiment aCGH data. \emph{BMC Research Notes}. \textbf{11} No. 3, 298.
+
 \end{document}
 
 
