Corrected small error in the vignette that caused an error during build
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/KCsmart@52721 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/KCS.Rnw
+++ b/inst/doc/KCS.Rnw
@@ -52,7 +52,7 @@ plot(spm1mb)
 \end{center}
 
 It is possible to select only particular chromosomes in the plot command, and to only display the gains or only the losses. We will now visualize the KCsmart output for gains of chromosomes 1, 12 and X.
-<<<<<<<<<<<<>>>>>>>>>>>>>
+\begin{center}
 <<fig = TRUE>>=
 plot(spm1mb, chromosomes=c(1, 12, "X"), type="g")
 @
